--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
+    "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-card-flip": "^1.0.10",
     "react-dom": "^16.13.1",
     "react-items-carousel": "^2.8.0",
     "react-material-ui-carousel": "^1.5.0",
+    "react-notification-popup": "^0.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
