--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ohstore-tsx",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ohhwear.github.io/Ohh/",
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
@@ -28,6 +29,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
