--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
     "formik": "^2.1.4",
+    "gh-pages": "^3.0.0",
     "react": "^16.13.1",
     "react-card-flip": "^1.0.10",
     "react-dom": "^16.13.1",
